make device singular in abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -8,7 +8,7 @@ single-particle energy levels of the device region including a description
 of the effects of the ``semi-infinite'' leads.
 We then use the method of configuration interaction to explore the effect
 of correlations on the system's quasiparticle peaks.
-We find that when excitations on the leads are not included, the devices'
+We find that when excitations on the leads are not included, the device's
 \ac{HOMO} and \ac{LUMO} quasiparticle peaks when including correlation
 are bracketed by their respective values at the Hartree-Fock (Koopmans)
 and \dscf level of theory.
