various small corrections, including Irene's set

--- a/body.tex
+++ b/body.tex
@@ -17,24 +17,24 @@ due to Lang~\cite{Lang1995prb}, serving as the model for subsequent
 studies in molecular tunnel junctions. In this early work, jellium
 electrodes are coupled to metal atom chains and the electronic structure
 of the system is treated using \ac{DFT}. The Kohn-Sham states in the
-\ac{LDA} approximation are treated as \acp{QP} and the electron
-scattering equations are solved for the case of an external voltage bias
+\ac{LDA} are treated as \acp{QP} and the electron
+scattering equations are solved with an external voltage bias
 applied to the electrodes. Similar scattering approaches in conjunction
 with tight binding Hamiltonians applied to the conductance of molecular
 junctions combined with Landauer-B\"uttiker theory for electron transport
 \cite{emberlykirczenow1999standingwave,
 emberlykirczenow2000molecularwire} have been undertaken. 
-Subsequently, similar methods became commonly used by combining a 
+Subsequently, similar methods combining a 
 \ac{DFT} treatment of the electronic structure with a formal \ac{NEGF}
-treatment of transport in open systems. More recently, the {\it GW}
-approximation~\cite{hedin1965gw} has been used to improve  the
-quaisparticle description of atomic scale tunnel junctions beyond a Kohn-Sham
-description~\cite{thygesen_rubio,neaton2007amines}.  Use of the
-Kohn-Sham energies in the NEGF formulation implies a single determinant
-or \ac{QP} approximation to the many-electron Green's function,
+treatment of transport in open systems have become commonly used; more
+recently, the {\it GW} approximation~\cite{hedin1965gw} has been used to
+improve  the quaisparticle description of atomic scale tunnel junctions
+beyond a Kohn-Sham description~\cite{thygesen_rubio,neaton2007amines}.
+Use of the Kohn-Sham energies in the NEGF formulation implies a single
+determinant or \ac{QP} approximation to the many-electron Green's function,
 and similarly the {\it GW} approximation may be viewed as a dynamically
 screened version of the Hartree-Fock theory, likewise implying a
-\ac{QP} description. Alternative to these methods are to use the
+\ac{QP} description. Alternatively to these methods, one can use the
 ideas of exact diagonalization or configuration interaction in rate
 equation formulations of electron
 transport~\cite{pedersen_many_body_tunneling}, or through a many-electron
@@ -242,7 +242,7 @@ this comparison, we first calculate the electron transmission through
 the device region using the Green's function
 approach. The calculation is then repeated but in the definition of the
 Green's function ${\bf G}$ and spectral densities ${\bf \Lambda}_{L/R}$ the
-self-energy terms are replaced with the \acp{CAP} $\um{W}_{L/R}$ leading
+self-energy terms are replaced with the \acp{CAP}, $\um{W}_{L/R}$, leading
 to the following expressions ($\um{H}_D$ is the Hamiltonian of the extended
 device region):
 \numparts
@@ -352,7 +352,7 @@ expanded vector. This vector is then screened or `pruned' by removing
 \acp{CSF} whose associated coefficient in the \ac{CI} eigenvector has a
 magnitude lower than a given threshold. This pruned vector serves as
 trial vector for the generation of a new set of randomly generated
-\acp{CSF}s in a subsequent cycle, and  this sequence is repeated until
+\acp{CSF} in a subsequent cycle, and  this sequence is repeated until
 convergence in the energy and CI vector length is reached. This scheme
 makes it possible to gradually increase the amount of correlation that
 the program will find, by gradually decreasing the \ac{CSF} inclusion
@@ -504,7 +504,7 @@ These findings for the weakly coupled molecular state are consistent with
 typical findings for molecular systems: the Koopmans EAs and IPs are 
 underestimated and overestimated, respectively, whereas the \dscf
 procedure tends to overestimate and underestimate EAs and IPs, respectively.
-Introducing electron correlations then renormalizes the funamental gap
+Introducing electron correlations then renormalizes the fundamental gap
 with the correlated energies for the HOMO and LUMO states bracketed by
 the Koopmans and \dscf estimates.
 Hence in the weakly coupled case and including only excitations to and
@@ -512,7 +512,7 @@ from molecule-like orbitals, we find that the molecular region behaves
 very much like an isolated molecule, with the additional features of an
 energy shift and a finite state lifetime due to the molecule-electrode
 coupling.
-Introducing self-consistency into the model shifts and signiciantly
+Introducing self-consistency into the model shifts and significantly
 broadens the resonance peaks as shown in figs.~\ref{fig:all45Ahomo} and
 \ref{fig:all45Alumo}.
 Improving the approximation to the \ac{QP} states by allowing an
