acronymized all occurances of configuration interaction

--- a/body.tex
+++ b/body.tex
@@ -35,10 +35,10 @@ determinant or \ac{QP} approximation to the many-electron Green's function,
 and similarly the {\it GW} approximation may be viewed as a dynamically
 screened version of the Hartree-Fock theory, likewise implying a
 \ac{QP} description. Alternatively to these methods, one can use the
-ideas of exact diagonalization or configuration interaction in rate
-equation formulations of electron
-transport~\cite{pedersen_many_body_tunneling}, or through a many-electron
-scattering formulation of the transport problem~\cite{vici2004,greer2011}. 
+ideas of exact diagonalization or \ac{CI} in rate equation formulations
+of electron transport~\cite{pedersen_many_body_tunneling}, or through a
+many-electron scattering formulation of the transport
+problem~\cite{vici2004,greer2011}. 
 
 In the following, we apply the method of \ac{CI} to a simple model of
 electrodes coupled to an atomic chain to investigate the influence of
@@ -711,7 +711,7 @@ energies and lifetimes. A simple model of a tunnel junction was introduced
 and consists of an atomic gold chain partitioned into left and right
 electrodes, and a central `molecule'. The electrode self-energies were
 approximated using complex absorbing potentials (\acp{CAP}) enabling the
-use of a configuration interaction method. The use of the \acp{CAP} was
+use of a \ac{CI} method. The use of the \acp{CAP} was
 validated against calculations using explicit electrode self-energies.
 The junction model was investigated using a non-self consistent single
 particle treatment or Koopmans treatment of \ac{QP} states, an
