add jim.greer@tyndall.ie to emails

--- a/paper.tex
+++ b/paper.tex
@@ -26,7 +26,7 @@
 \title{Quasiparticle energies and lifetimes in a metallic chain model of a tunnel junction}
 \author{M Szepieniec, I Yeriskin and J C  Greer}
 \address{Tyndall National Institute, University College Cork, Cork, Ireland}
-\ead{mark.szepieniec@tyndall.ie}
+\eads{\mailto{mark.szepieniec@tyndall.ie}, \mailto{jim.greer@tyndall.ie}}
 
 \input{acronyms}
 
