--- a/abstract.tex
+++ b/abstract.tex
@@ -1,20 +1,20 @@
-As electronics devices scale to sub 10 nanometer lengths, the distinction
-between `device' and `leads' or `electrodes' becomes blurred.
+As electronics devices scale to sub--10 nanometer lengths, the distinction
+between `device' and `electrodes' becomes blurred.
 Here, we study a simple model of a molecular tunnel junction, consisting
 of an atomic gold chain partitioned into left and right electrodes, and a
 central `molecule'.
 Using a complex absorbing potential, we are able to reproduce the
 single-particle energy levels of the device region including a description
-of the effects of the ``semi-infinite'' leads.
+of the effects of the ``semi-infinite'' electrodes.
 We then use the method of configuration interaction to explore the effect
 of correlations on the system's quasiparticle peaks.
 We find that when excitations on the leads are not included, the device's
 \ac{HOMO} and \ac{LUMO} quasiparticle peaks when including correlation
-are bracketed by their respective values at the Hartree-Fock (Koopmans)
-and \dscf level of theory.
-Increasing the coupling strength (by decreasing the molecule-lead
-separation) produces wider peaks, corresponding to shorter lifetimes.
+are bracketed by their respective values in the Hartree-Fock (Koopmans)
+and \dscf approximations.
 In contrast, including excitations on the leads has significant effects
 on the transmission (and hence the conductivity) of the device. The
 bracketing property no longer holds and both the positions and the lifetimes
-of the quasiparticle levels shift significantly.
+of the quasiparticle levels shift considerably, indicating that the
+combined effect of coupling and correlation is to alter the quasiparticle
+spectrum significantly from that of an isolated molecule.
