add refs and citations for h-k, k-s, and kohn's dft review

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1547,3 +1547,44 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   publisher = {American Physical Society}
 }
 
+@article{kohn_dftreview,
+  author = {Kohn, W. and Becke, A. D. and Parr, R. G.},
+  title = {Density Functional Theory of Electronic Structure},
+  journal = {J. Phys. Chem.},
+  volume = {100},
+  number = {31},
+  pages = {12974-12980},
+  year = {1996},
+  doi = {10.1021/jp960669l},
+  URL = {http://pubs.acs.org/doi/abs/10.1021/jp960669l},
+  eprint = {http://pubs.acs.org/doi/pdf/10.1021/jp960669l}
+}
+
+@article{hohenberg_kohn,
+  title = {Inhomogeneous Electron Gas},
+  author = {Hohenberg, P. and Kohn, W.},
+  journal = {Phys. Rev.},
+  volume = {136},
+  issue = {3B},
+  pages = {B864--B871},
+  year = {1964},
+  month = {Nov},
+  doi = {10.1103/PhysRev.136.B864},
+  url = {http://link.aps.org/doi/10.1103/PhysRev.136.B864},
+  publisher = {American Physical Society}
+}
+
+@article{kohn_sham,
+  title = {Self-Consistent Equations Including Exchange and Correlation Effects},
+  author = {Kohn, W. and Sham, L. J.},
+  journal = {Phys. Rev.},
+  volume = {140},
+  issue = {4A},
+  pages = {A1133--A1138},
+  year = {1965},
+  month = {Nov},
+  doi = {10.1103/PhysRev.140.A1133},
+  url = {http://link.aps.org/doi/10.1103/PhysRev.140.A1133},
+  publisher = {American Physical Society}
+}
+
