--- a/body.tex
+++ b/body.tex
@@ -12,13 +12,14 @@ transport formulations as experiments for these systems provide well
 defined and understood conductance values.
 
 Some of the earliest theoretical work with explicit treatment of the
-electronic structure within a quatum transport study of atomic chains is
+electronic structure within a quantum transport study of atomic chains is
 due to Lang~\cite{Lang1995prb}, serving as the model for subsequent
 studies in molecular tunnel junctions. In this early work, jellium
 electrodes are coupled to metal atom chains and the electronic structure
-of the system is treated using \ac{DFT}. The Kohn-Sham states in the
-\ac{LDA} are treated as \acp{QP} and the electron
-scattering equations are solved with an external voltage bias
+of the system is treated using
+\ac{DFT}~\cite{hohenberg_kohn, kohn_sham, kohn_dftreview}.
+The Kohn-Sham states in the \ac{LDA} are treated as \acp{QP} and the
+electron scattering equations are solved with an external voltage bias
 applied to the electrodes. Similar scattering approaches in conjunction
 with tight binding Hamiltonians applied to the conductance of molecular
 junctions combined with Landauer-B\"uttiker theory for electron transport
