--- a/body.tex
+++ b/body.tex
@@ -47,7 +47,7 @@ electron correlations on \ac{QP} states arising from the device
 region. We explicitly consider the influence of electrode excitations as
 they couple to the device region. Opening of the system by the extended
 electrodes is modeled by a \ac{CAP} which has been constructed specifically
-to yield the same complex energy eigenvaules as a conventional electrode
+to yield the same complex energy eigenvalues as a conventional electrode
 self-energy would produce~\cite{henderson}. This approach enables us to study
 the junction in an uncorrelated limit (single determinant approximation), and
 to systematically include electron correlations on the device region and
@@ -85,10 +85,10 @@ construct the Hamiltonian matrix elements for the CI calculations.
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/figure1}
 	\end{center}
-	\caption{Model system studied in this work. The molecule consists of
-        20 Gold atoms, while the explicit electrode regions each consist of 24
-	atoms. The spacing between molecules and electrodes determines the
-	coupling of the molecular states to the electrodes.}
+	\caption{Extended device region studied in this work: The molecule
+	consists of 20 Gold atoms, while the explicit electrode regions
+	each consist of 24 atoms. The spacing between molecules and electrodes
+	determines the coupling of the molecular states to the electrodes.}
 	\label{fig:chaincapdevice}
 \end{figure}
 
