add ref for and citation of ness and dash's prb paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1588,3 +1588,19 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   publisher = {American Physical Society}
 }
 
+@article{ness_dash_prb,
+  title = {Nonequilibrium quantum transport in fully interacting single-molecule junctions},
+  author = {Ness, H. and Dash, L. K.},
+  journal = {Phys. Rev. B},
+  section = {B},
+  volume = {84},
+  issue = {23},
+  pages = {235428},
+  numpages = {8},
+  year = {2011},
+  month = {Dec},
+  doi = {10.1103/PhysRevB.84.235428},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.84.235428},
+  publisher = {American Physical Society}
+}
+
