--- a/body.tex
+++ b/body.tex
@@ -108,7 +108,7 @@ considered. Exceptions include ref.~\cite{galperin_nitzan2006leadexcitations}
 where the effect of coupling of lead excitations to a two state model of
 a molecular tunnel junction is explored, and a recent formulation
 of \ac{NEGF} that allows for electrode interactions to be explicitly
-treated~\cite{ness2012jpa_leadnegf}.
+treated~\cite{ness_dash_prb}.
 With our approach, excitations from the portions of the electrodes that
 are included in the explicit device region can be included.
 
