shortened and rearranged the abstract.

--- a/abstract.tex
+++ b/abstract.tex
@@ -12,9 +12,8 @@ We find that when excitations on the leads are not included, the device's
 \ac{HOMO} and \ac{LUMO} quasiparticle peaks when including correlation
 are bracketed by their respective values in the Hartree-Fock (Koopmans)
 and \dscf approximations.
-In contrast, including excitations on the leads has significant effects
-on the transmission (and hence the conductivity) of the device. The
-bracketing property no longer holds and both the positions and the lifetimes
-of the quasiparticle levels shift considerably, indicating that the
-combined effect of coupling and correlation is to alter the quasiparticle
-spectrum significantly from that of an isolated molecule.
+In contrast, when excitations on the leads are included, the bracketing
+property no longer holds and both the positions and the lifetimes of the
+quasiparticle levels change considerably, indicating that the combined
+effect of coupling and correlation is to alter the quasiparticle spectrum
+significantly from that of an isolated molecule.
