add citation and ref for damle_ghosh_datta prb

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1604,3 +1604,19 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   publisher = {American Physical Society}
 }
 
+@article{damle_ghosh_datta,
+  title = {Unified description of molecular conduction: From molecules to metallic wires},
+  author = {Damle, P. S. and Ghosh, A. W. and Datta, S.},
+  journal = {Phys. Rev. B},
+  section = {B},
+  volume = {64},
+  issue = {20},
+  pages = {201403},
+  numpages = {4},
+  year = {2001},
+  month = {Oct},
+  doi = {10.1103/PhysRevB.64.201403},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.64.201403},
+  publisher = {American Physical Society}
+}
+
