--- a/body.tex
+++ b/body.tex
@@ -27,7 +27,8 @@ junctions combined with Landauer-B\"uttiker theory for electron transport
 emberlykirczenow2000molecularwire} have been undertaken. 
 Subsequently, similar methods combining a 
 \ac{DFT} treatment of the electronic structure with a formal \ac{NEGF}
-treatment of transport in open systems have become commonly used; more
+treatment of transport in open systems have become commonly
+used~\cite{damle_ghosh_datta}; more
 recently, the {\it GW} approximation~\cite{hedin1965gw} has been used to
 improve  the quaisparticle description of atomic scale tunnel junctions
 beyond a Kohn-Sham description~\cite{thygesen_rubio,neaton2007amines}.
