NEGF formulation -> NEGF formalism

--- a/body.tex
+++ b/body.tex
@@ -32,7 +32,7 @@ used~\cite{damle_ghosh_datta}; more
 recently, the {\it GW} approximation~\cite{hedin1965gw} has been used to
 improve  the quaisparticle description of atomic scale tunnel junctions
 beyond a Kohn-Sham description~\cite{thygesen_rubio,neaton2007amines}.
-Use of the Kohn-Sham energies in the NEGF formulation implies a single
+Use of the Kohn-Sham energies in the NEGF formalism implies a single
 determinant or \ac{QP} approximation to the many-electron Green's function,
 and similarly the {\it GW} approximation may be viewed as a dynamically
 screened version of the Hartree-Fock theory, likewise implying a
