QP states arising from the device region -> QP states of

--- a/body.tex
+++ b/body.tex
@@ -44,7 +44,7 @@ problem~\cite{vici2004,greer2011}.
 
 In the following, we apply the method of \ac{CI} to a simple model of
 electrodes coupled to an atomic chain to investigate the influence of
-electron correlations on \ac{QP} states arising from the device
+electron correlations on the \ac{QP} states of the device
 region. We explicitly consider the influence of electrode excitations as
 they couple to the device region. Opening of the system by the extended
 electrodes is modeled by a \ac{CAP} which has been constructed specifically
