would produce -> produces

--- a/body.tex
+++ b/body.tex
@@ -49,7 +49,7 @@ region. We explicitly consider the influence of electrode excitations as
 they couple to the device region. Opening of the system by the extended
 electrodes is modeled by a \ac{CAP} which has been constructed specifically
 to yield the same complex energy eigenvalues as a conventional electrode
-self-energy would produce~\cite{henderson}. This approach enables us to study
+self-energy produces~\cite{henderson}. This approach enables us to study
 the junction in an uncorrelated limit (single determinant approximation), and
 to systematically include electron correlations on the device region and
 electrodes to study how the \ac{QP} states evolve. 
