--- a/body.tex
+++ b/body.tex
@@ -51,8 +51,8 @@ electrodes is modeled by a \ac{CAP} which has been constructed specifically
 to yield the same complex energy eigenvalues as a conventional electrode
 self-energy produces~\cite{henderson}. This approach enables us to study
 the junction in an uncorrelated limit (single determinant approximation), and
-to systematically include electron correlations on the device region and
-electrodes to study how the \ac{QP} states evolve. 
+to systematically include electron correlations on the device region
+to study how the \ac{QP} states evolve. 
 
 \section{Methods}
 \label{sec:method}
