portion of the electrode not treated by the device region -> portion of the electrode not included in the device region

--- a/body.tex
+++ b/body.tex
@@ -102,7 +102,7 @@ performed. The device region is given by an explicit model that includes
 the device (i.e. atomic chain, molecule, nanowire) as well as a region
 that defines the bonding of the device to electrodes, resulting in an
 `extended device' or `extended molecule'. The portion of the
-electrode not explicitly treated by the extended device region in
+electrode not explicitly included in the extended device region in
 most theoretical studies is then treated by electrode self-energies. In this
 approximation, electronic excitations in the electrode region are not
 considered. Exceptions include ref.~\cite{galperin_nitzan2006leadexcitations}
