--- a/body.tex
+++ b/body.tex
@@ -123,7 +123,7 @@ a Green's function approach  as implemented in the TiMeS program~\cite{times};
 the electrodes in these (uncorrelated) scattering calculations are
 described using standard electrode  self-energies. This scattering
 calculation delivers the Hartree-Fock \ac{QP} spectrum including
-the energy shifts and state broadening that arise from coupling the molecular
+the energy shifts and state broadenings that arise from coupling the molecular
 region to electrodes, and serves as the reference point for discussing
 subsequent calculations performed as we introduce correlations into the
 calculations. 
