shorten introductory CI sentence

--- a/body.tex
+++ b/body.tex
@@ -129,8 +129,8 @@ subsequent calculations performed as we introduce correlations into the
 calculations. 
 
 \subsection{Electronic structure}
-To treat electron correlations, we apply the method of \ac{CI}. The \ac{CI}
-method is the application of the  Rayleigh-Ritz linear variational
+To treat electron correlations, we apply the method of \ac{CI}, which is
+the application of the  Rayleigh-Ritz linear variational
 principle to the calculation of quantum many-electron  energies. Within
 this approach, the many-electron wavefunction is expanded in terms  of
 Slater determinants (or spin-coupled sums of determinants referred to as
