HF states -> HF molecular orbitals

--- a/body.tex
+++ b/body.tex
@@ -145,8 +145,8 @@ $E$ is a many-electron energy and $\vec{c}$ is the vector of the
 expansion coefficients or CI vector. The matrix elements of $\um{H}$
 and $\um{S}$ are constructed from one- and two-electron integrals
 defined in the single particle basis used to construct the CSFs, and for
-example can be Hartree-Fock states. However, in the CI treatment of the
-many-electron problem, no reference is made to single particle or
+example can be Hartree-Fock molecular orbitals. However, in the CI treatment
+of the many-electron problem, no reference is made to single particle or
 \ac{QP} energies. Hence the inclusion of the electrodes into the
 CI problem using electrode self-energies is complicated by the fact that
 the self-energies are functions of the \ac{QP} energies on the
