simplify last sentence of subsec:electronic structure

--- a/body.tex
+++ b/body.tex
@@ -159,8 +159,8 @@ or \acp{CAP},  the traditionally Hermitian \ac{CI} generalized eigenvalue
 problem becomes a complex symmetric generalized eigenvalue problem. The
 procedure we follow for construction of an energy-independent \ai \ac{CAP} 
 from the energy-dependant self-energy is discussed in detail
-in~\cite{henderson}, and we briefly cover the essential points needed
-for the generation of the \ac{CAP} in the following.
+in~\cite{henderson}; we briefly cover the essential points
+in the next section.
 
 \subsection{Construction of the \ac{CAP}}
 We first consider a system with bare \ac{QP} Hamiltonian $\um{h}_0$ in the
