permits, allows -> allows, enables

--- a/body.tex
+++ b/body.tex
@@ -188,9 +188,9 @@ the complex energies $\omega_i$, right eigenvectors $\ket{U_i}$ and left
 eigenvectors $\bra{V_i}$; distinct left and right eigenvectors are a
 consequence of introducing the complex symmetric self-energy matrices into
 the eigenvalue problem.
-The adiabatic introduction of the self-energies permits
+The adiabatic introduction of the self-energies allows
 us to `label' the molecular states and to follow their evolution as the
-system is opened. This allows us to select those eigenstates (and
+system is opened. This enables us to select those eigenstates (and
 eigenvalues) of the coupled system that correspond to states of the
 uncoupled device region. At $\lambda=1$, the real part of $\omega_i$
 gives the energy of the $i$th resonance including the shift due to
