im part gives -> im part is proportional to

--- a/body.tex
+++ b/body.tex
@@ -194,7 +194,8 @@ system is opened. This enables us to select those eigenstates (and
 eigenvalues) of the coupled system that correspond to states of the
 uncoupled device region. At $\lambda=1$, the real part of $\omega_i$
 gives the energy of the $i$th resonance including the shift due to
-electrode coupling and the imaginary part gives the level broadening.
+electrode coupling and the imaginary part is proportional to the level
+broadening.
 
 The goal is to build an energy-independent complex potential
 $\um{W} = \um{W_L} + \um{W_R}$
