--- a/body.tex
+++ b/body.tex
@@ -259,7 +259,7 @@ The transmission is then calculated as
   \label{eq:transmfromG}
 \end{equation}
 where the \acp{CAP} play the role of the electrode self-energies.
-The comparison obtained in this manner is shown in fig.~\ref{fig:transdat}
+The comparison obtained in this manner is shown in fig.~\ref{fig:transdat},
 revealing that the \ac{CAP} provides an accurate energy-independent
 representation of the self-energies and in particular, excellent agreement
 is achieved on the energy range around the \ac{HOMO}-\ac{LUMO} gap of
