some grammar corrections/improvements

--- a/body.tex
+++ b/body.tex
@@ -279,8 +279,8 @@ interest which is the focus of our subsequent calculations.
 \end{figure}
 
 Having verified that the \acp{CAP} are able to reproduce the electron
-transmission to a good approximation compared against using explicit
-electrode self-energies, we next examine if the transmission resonances
+transmission to a good approximation compared to explicit
+electrode self-energies, we next examine whether the transmission resonances
 can be well approximated as Lorenztian resonances. This question is
 motivated by the fact that in our subsequent many-body treatment,
 \ac{QP} energies will be calculated as differences of complex
@@ -301,7 +301,7 @@ constructed using the complex eigenvalues $\omega_i$ obtained from the
         \label{eq:lobro}
 \end{equation}
 where $\Gamma = 2 \mathrm{Im}(\omega_i)$ (i.e., the width of the
-Lorentzian peak) and is inversely proportional to the lifetime of the
+Lorentzian peak) is inversely proportional to the lifetime of the
 \ac{QP}. These Lorentzian resonances are compared to the transmission
 spectrum of the device obtained using explicit self-energies and a
 scattering calculation; the results of the comparison are shown in
